<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ListView
        android:id="@+id/layout_choose_song_listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_choose_song_textView1"
        android:layout_marginTop="10dp" >
    </ListView>

    <TextView
        android:id="@+id/layout_choose_song_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/live_hall"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/layout_choose_song_radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/layout_choose_song_textView1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/layout_choose_song_radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkimg"
            android:text="@string/easy"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/layout_choose_song_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkimg"
            android:text="@string/normal"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/layout_choose_song_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkimg"
            android:text="@string/hard"
            android:textSize="12sp" />
        
        <RadioButton
            android:id="@+id/layout_choose_song_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkimg"
            android:text="@string/expert"
            android:textSize="12sp" />
        
        <RadioButton
            android:id="@+id/layout_choose_song_radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkimg"
            android:text="@string/technical"
            android:textSize="12sp" />
        
        <RadioButton
            android:id="@+id/layout_choose_song_radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkimg"
            android:checked="true"
            android:text="@string/master"
            android:textSize="12sp" />

    </RadioGroup>

</RelativeLayout>
