<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/global_settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/layout_global_settings_checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/autoplay" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velocity"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/layout_global_settings_seekBar1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:max="480"
                android:progress="266" />

            <TextView
                android:id="@+id/layout_global_settings_textView1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offset"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/layout_global_settings_seekBar2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:max="500"
                android:progress="250" />

            <TextView
                android:id="@+id/layout_global_settings_textView2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roughset"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/layout_global_settings_seekBar3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:max="10"
                android:progress="5" />

            <TextView
                android:id="@+id/layout_global_settings_textView3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="50dp"
            android:text="@string/offset_explanation" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >
                
                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/assets_link"
	                android:textSize="20sp" />
                
            </LinearLayout>

            <RadioGroup
                android:id="@+id/layout_global_settings_radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" >

                <RadioButton
                    android:id="@+id/layout_global_settings_radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            		android:button = "@drawable/checkimg"
                    android:checked="true"
                    android:text="@string/link_1" />

                <RadioButton
                    android:id="@+id/layout_global_settings_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            		android:button = "@drawable/checkimg"
                    android:text="@string/link_2" />

                <RadioButton
                    android:id="@+id/layout_global_settings_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            		android:button = "@drawable/checkimg"
                    android:text="@string/link_3" />
                
                <RadioButton
                    android:id="@+id/layout_global_settings_radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            		android:button = "@drawable/checkimg"
                    android:text="@string/link_4" />
                
                <RadioButton
                    android:id="@+id/layout_global_settings_radio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            		android:button = "@drawable/checkimg"
                    android:text="@string/link_5" />
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_gravity="center_vertical"
                android:text="@string/link_explanation"
                android:textSize="15sp" />
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>