<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription" >

    <RelativeLayout 
        android:id="@+id/layout_home_relative"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent">
        
        <ImageView
        android:id="@+id/layout_home_mainbgImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/start_bg" />

    <Button
        android:id="@+id/layout_home_homeButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:background="@layout/button_general"
        android:text="@string/practice" />

    <Button
        android:id="@+id/layout_home_liveButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:background="@layout/button_general"
        android:text="@string/live" />
    
    <Button
        android:id="@+id/layout_home_settingsButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:background="@layout/button_general"
        android:text="@string/settings" />
        
    </RelativeLayout>
        

</FrameLayout>
