<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="#9FAF7F" >

    <LinearLayout
        android:id="@+id/layout_assessment_linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="92dp"
        android:orientation="horizontal"
        android:background="#7FFFFFFF" >

        <TextView
            android:id="@+id/layout_assessment_emptyTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:id="@+id/layout_assessment_perfectTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/perfect" />

        <TextView
            android:id="@+id/layout_assessment_greatTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/great" />

        <TextView
            android:id="@+id/layout_assessment_goodTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/good" />

        <TextView
            android:id="@+id/layout_assessment_badTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/bad" />

        <TextView
            android:id="@+id/layout_assessment_missTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/miss" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_assessment_linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/layout_assessment_emptyView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:id="@+id/layout_assessment_perfectView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:id="@+id/layout_assessment_greatView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:id="@+id/layout_assessment_goodView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:id="@+id/layout_assessment_badView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:id="@+id/layout_assessment_missView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/layout_assessment_comboView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:text="" />

    <TextView
        android:id="@+id/layout_assessment_comboTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/layout_assessment_comboView"
        android:layout_alignBottom="@+id/layout_assessment_comboView"
        android:layout_toStartOf="@+id/layout_assessment_comboView"
        android:textColor="#000000"
        android:text="@string/combo" />

</RelativeLayout>